--- a/impressum.html
+++ b/impressum.html
@@ -87,6 +87,26 @@ Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden 
   <div class="cookie-hinweis" id="cookiehinweis">
       <div class="col-left">
         <p class="p-cookie">Wir nutzen Cookies um Nutzerverhalten zu analysieren und die Nutzerfreundlichkeit der Webseite zu optimieren.<br />Mehr darüber kannst du in unserer <a href="datenschutz.html">Datenschutzerklärung</a> erfahren.</p>
+        <div class="checkboxes-cookie">
+            <div class="checkbox-container">
+                <label class="checkbox-label"><input type="checkbox" checked disabled>
+                    Funktionale Cookies
+                    <span class="checkmark"></span>
+                </label>
+            </div>
+            <div class="checkbox-container">
+                <label class="checkbox-label"><input type="checkbox">
+                    Analyse Cookies
+                    <span class="checkmark"></span>
+                </label>
+            </div>
+            <div class="checkbox-container">
+                <label class="checkbox-label"><input type="checkbox">
+                    Marketing Cookies
+                    <span class="checkmark"></span>
+                </label>
+            </div>
+        </div>
       </div>
       <div class="col-right">
           <a class="button cookie-hinweis-button" onclick='cookieOk()'>Ablehnen</a>
